Updating title attributes

--- a/downstream/assemblies/platform/assembly-aap-migration.adoc
+++ b/downstream/assemblies/platform/assembly-aap-migration.adoc
@@ -2,15 +2,15 @@
 ifdef::context[:parent-context: {context}]
 
 [id="aap-migration"]
-= Migrating {PlatformName} to {OperatorPlatform}
+= Migrating {PlatformName} to {OperatorPlatformName}
 
 :context: aap-migration
 
 [role="_abstract"]
 
-Migrating your {PlatformName} deployment to the {OperatorPlatform} allows you to take advantage of the benefits provided by a Kubernetes native operator, including simplified upgrades and full lifecycle support for your {PlatformName} deployments.
+Migrating your {PlatformName} deployment to the {OperatorPlatformNameShort} allows you to take advantage of the benefits provided by a Kubernetes native operator, including simplified upgrades and full lifecycle support for your {PlatformName} deployments.
 
-Use these procedures to migrate any of the following deployments to the {OperatorPlatform}:
+Use these procedures to migrate any of the following deployments to the {OperatorPlatformNameShort}:
 
 * A VM-based installation of Ansible Tower 3.8.6, {ControllerName}, or {HubName}
 * An Openshift instance of Ansible Tower 3.8.6 ({PlatformNameShort} 1.2)
