--- a/downstream/assemblies/platform/assembly-install-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-install-aap-operator.adoc
@@ -4,8 +4,8 @@ ifdef::context[:parent-context: {context}]
 
 
 
-[id="assembly-install-aap-operator"]
-= Installing the {PlatformName} operator on {OCP}
+[id="install-aap-operator_{context}"]
+= Installing the {PlatformName} on {OCP}
 
 [role="_abstract"]
 
