--- a/downstream/assemblies/platform/assembly-installing-hub-operator.adoc
+++ b/downstream/assemblies/platform/assembly-installing-hub-operator.adoc
@@ -27,7 +27,7 @@ When an instance of {HubName} is removed, the PVCs are not automatically deleted
 
 == Prerequisites
 
-* You have installed the {OperatorPlatform} in Operator Hub.
+* You have installed the {OperatorPlatformNameShort} in Operator Hub.
 
 // commenting out below as encouraging users to use platform gateway for installation, only covering configuration here [gmurray]
 // == Installing the {HubName} operator
