--- a/downstream/assemblies/topologies/assembly-ocp-topologies.adoc
+++ b/downstream/assemblies/topologies/assembly-ocp-topologies.adoc
@@ -2,7 +2,7 @@
 
 = Operator topologies
 
-The {OperatorPlatform} uses Red Hat OpenShift operators to deploy {PlatformNameShort} within Red Hat OpenShift. Customers manage the product and infrastructure lifecycle.
+The {OperatorPlatformNameShort} uses Red Hat OpenShift operators to deploy {PlatformNameShort} within Red Hat OpenShift. Customers manage the product and infrastructure lifecycle.
 
 //OCP growth topology
 include::topologies/ref-ocp-a-env-a.adoc[leveloffset=+1]
