--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -48,7 +48,8 @@
 :RunnerRpm: Ansible-runner rpm/container
 
 // Operators
-:OperatorPlatform: Ansible Automation Platform Operator
+:OperatorPlatformName: Red Hat Ansible Automation Platform Operator
+:OperatorPlatformNameShort: Ansible Automation Platform Operator
 :OperatorHub: Ansible Automation Platform Hub Operator
 :OperatorController: Ansible Automation Platform Controller Operator
 :OperatorResource: Ansible Automation Platform Resource Operator
