--- a/downstream/modules/platform/proc-aap-create_controller.adoc
+++ b/downstream/modules/platform/proc-aap-create_controller.adoc
@@ -9,7 +9,7 @@ Use the following steps to create an AutomationController custom resource object
 .Procedure
 . Log in to *{OCP}*.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select the {OperatorPlatformNameShort} installed on your project namespace.
 . Select the *Automation Controller* tab.
 . Click btn:[Create AutomationController].
 . Enter a name for the new deployment.
