--- a/downstream/modules/platform/proc-aap-create_hub.adoc
+++ b/downstream/modules/platform/proc-aap-create_hub.adoc
@@ -9,7 +9,7 @@ Use the following steps to create an AutomationHub custom resource object.
 .Procedure
 . Log in to *{OCP}*.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select the {OperatorPlatformNameShort} installed on your project namespace.
 . Select the *Automation Hub* tab.
 . Click btn:[Create AutomationHub].
 . Enter a name for the new deployment.
