--- a/downstream/modules/platform/proc-aap-migration-backup.adoc
+++ b/downstream/modules/platform/proc-aap-migration-backup.adoc
@@ -5,7 +5,7 @@
 
 .Prerequisites
 
-To migrate {PlatformNameShort} deployment to {OperatorPlatform}, you must have the following:
+To migrate {PlatformNameShort} deployment to {OperatorPlatformNameShort}, you must have the following:
 
 * Secret key secret
 * Postgresql configuration
