--- a/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
@@ -5,13 +5,13 @@ Regularly backing up your *{PlatformNameShort}* deployment is vital to protect a
 
 .Prerequisites
 * You must be authenticated on OpenShift cluster.
-* You have installed {OperatorPlatform} on the cluster.
-* You have deployed a *{PlatformNameShort}* instance using the {OperatorPlatform}.
+* You have installed {OperatorPlatformNameShort} on the cluster.
+* You have deployed a *{PlatformNameShort}* instance using the {OperatorPlatformNameShort}.
 
 .Procedure 
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Go to your *All Instances* tab, and click btn:[Create New].
 . Select *{PlatformNameShort} Backup* from the list.
 +
@@ -42,7 +42,7 @@ To verify that your backup was successful you can:
 
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Click *All Instances*.
 
 The *All Instances* page displays the main backup and the backups for each component with the name you specified when creating your backup resource. 
