--- a/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
@@ -3,7 +3,7 @@
 = Recovering your {PlatformNameShort} deployment
 *{PlatformNameShort}* manages any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you recover *{PlatformNameShort}* you also restore these components.
 
-In previous versions of the {OperatorPlatform}, it was necessary to create a restore object for each component of the platform. 
+In previous versions of the {OperatorPlatformNameShort}, it was necessary to create a restore object for each component of the platform. 
 Now, you create a single *AnsibleAutomationPlatformRestore* resource, which  creates and manages the other restore objects: 
 
 * AutomationControllerRestore
@@ -12,13 +12,13 @@ Now, you create a single *AnsibleAutomationPlatformRestore* resource, which  cre
 
 .Prerequisites
 * You must be authenticated with an OpenShift cluster.
-* You have installed the {OperatorPlatform} on the cluster.
+* You have installed the {OperatorPlatformNameShort} on the cluster.
 * The *AnsibleAutomationPlatformBackups* deployment is available in your cluster.
 
 .Procedure 
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Go to your *All Instances* tab, and click btn:[Create New].
 . Select *{PlatformNameShort} Restore* from the list.
 . For *Name* enter the name for the recovery deployment. 
