--- a/downstream/modules/platform/proc-configuring-controller-route-options.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-route-options.adoc
@@ -7,7 +7,7 @@ The {PlatformName} operator installation form allows you to further configure yo
 .Procedure
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *Automation Controller* tab. 
 . For new instances, click btn:[Create AutomationController].
 .. For existing instances, you can edit the YAML view by clicking the {MoreActionsIcon} icon and then btn:[Edit AutomationController].
