--- a/downstream/modules/platform/proc-controller-ingress-options.adoc
+++ b/downstream/modules/platform/proc-controller-ingress-options.adoc
@@ -2,13 +2,13 @@
 
 = Configuring the ingress type for your {ControllerName} operator
 
-The {OperatorPlatform} installation form allows you to further configure your {ControllerName} operator ingress under *Advanced configuration*.
+The {OperatorPlatformNameShort} installation form allows you to further configure your {ControllerName} operator ingress under *Advanced configuration*.
 
 .Procedure
 
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *Automation Controller* tab. 
 . For new instances, click btn:[Create AutomationController].
 .. For existing instances, you can edit the YAML view by clicking the {MoreActionsIcon} icon and then btn:[Edit AutomationController].
