--- a/downstream/modules/platform/proc-deploy-eda-controller-with-aap-operator-ocp.adoc
+++ b/downstream/modules/platform/proc-deploy-eda-controller-with-aap-operator-ocp.adoc
@@ -5,7 +5,7 @@
 
 .Prerequisites
 
-* You have installed {OperatorPlatform} on {OCPShort}.
+* You have installed {OperatorPlatformNameShort} on {OCPShort}.
 * You have installed and configured {ControllerName}.
 
 .Procedure
