--- a/downstream/modules/platform/proc-install-cli-aap-operator.adoc
+++ b/downstream/modules/platform/proc-install-cli-aap-operator.adoc
@@ -10,7 +10,7 @@ Use this procedure to subscribe a namespace to an operator.
 
 [IMPORTANT]
 ====
-You can only subscribe a single instance of the {OperatorPlatform} into a single namespace. 
+You can only subscribe a single instance of the {OperatorPlatformNameShort} into a single namespace. 
 Subscribing multiple instances in the same namespace can lead to improper operation for both operator instances. 
 ====
 
