--- a/downstream/modules/platform/proc-installing-hub-using-operator.adoc
+++ b/downstream/modules/platform/proc-installing-hub-using-operator.adoc
@@ -1,14 +1,14 @@
 [id="proc-installing-hub-using-operator_{context}"]
 
-= Installing {HubName} using the {OperatorPlatform}
+= Installing {HubName} using the {OperatorPlatformNameShort}
 
-Use the following procedure to install {HubName} using the {OperatorPlatform}.
+Use the following procedure to install {HubName} using the {OperatorPlatformNameShort}.
 
 .Procedure
 
 . Log in to {OCP}.
 . Navigate to menu:Operator[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the {HubNameStart} tab.
 . Click btn:[Create {HubNameStart}].
 . Select btn:[YAML view].
