--- a/downstream/modules/platform/proc-installing-the-ansible-platform-operator.adoc
+++ b/downstream/modules/platform/proc-installing-the-ansible-platform-operator.adoc
@@ -6,8 +6,8 @@
 
 . Log in to {OCP}.
 . Navigate to menu:Operator[Operator Hub]. 
-. Search for the {OperatorPlatform}.
-. Select the {OperatorPlatform} project.
+. Search for the {OperatorPlatformNameShort}.
+. Select the {OperatorPlatformNameShort} project.
 . Click on the Operator tile.
 . Click btn:[Install].
 . Select a Project to install the Operator into.
