--- a/downstream/modules/platform/proc-operator-link-components.adoc
+++ b/downstream/modules/platform/proc-operator-link-components.adoc
@@ -2,14 +2,14 @@
 
 = Linking your components to the platform gateway  
 
-After installing the {OperatorPlatform} in your namespace you can set up your *{PlatformNameShort}* instance.
+After installing the {OperatorPlatformNameShort} in your namespace you can set up your *{PlatformNameShort}* instance.
 Then link all the platform components to a single user interface. 
 
 .Procedure 
 
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *Details* tab. 
 
 . On the *{PlatformNameShort}* tile click btn:[Create instance].
@@ -34,7 +34,7 @@ spec:
 . Click btn:[Create].
 
 .Verification
-Go to your {OperatorPlatform} deployment and click btn:[All instances] to verify if all instances deployed correctly.
+Go to your {OperatorPlatformNameShort} deployment and click btn:[All instances] to verify if all instances deployed correctly.
 You should see the *{PlatformNameShort}* instance and the deployed *AutomationController*, *EDA*, and *AutomationHub* instances here.
 
 Alternatively you can check by the command line, run: `oc get route` 
