--- a/downstream/modules/platform/proc-provision-ocp-storage-with-readwritemany.adoc
+++ b/downstream/modules/platform/proc-provision-ocp-storage-with-readwritemany.adoc
@@ -3,7 +3,7 @@
 
 = Provisioning OCP storage with `ReadWriteMany` access mode
 
-To ensure successful installation of {OperatorPlatform}, you must provision your storage type for {HubName} initially to `ReadWriteMany` access mode.
+To ensure successful installation of {OperatorPlatformNameShort}, you must provision your storage type for {HubName} initially to `ReadWriteMany` access mode.
 
 .Procedure
 
