--- a/downstream/modules/platform/proc-update-aap-on-ocp.adoc
+++ b/downstream/modules/platform/proc-update-aap-on-ocp.adoc
@@ -9,7 +9,7 @@ When you perform a patch update for an installation of {PlatformNameShort} on {O
 +
 [NOTE]
 ====
-It is recommended that you set a manual install strategy on your {OperatorPlatform} subscription (set when installing or upgrading the Operator) and you will be prompted to approve an upgrade when it becomes available in your selected update channel. Stable channels for each X.Y release (for example, stable-2.5) are available.
+It is recommended that you set a manual install strategy on your {OperatorPlatformNameShort} subscription (set when installing or upgrading the Operator) and you will be prompted to approve an upgrade when it becomes available in your selected update channel. Stable channels for each X.Y release (for example, stable-2.5) are available.
 ====
 +
 . A new Subscription, CSV, and Operator containers will be created alongside the old Subscription, CSV, and containers. Then the old resources will be cleaned up if the new install was successful.
