--- a/downstream/modules/platform/ref-operator-ocp-version.adoc
+++ b/downstream/modules/platform/ref-operator-ocp-version.adoc
@@ -4,7 +4,7 @@
 
 [role="_abstract"]
 
-The {OperatorPlatform} to install {PlatformNameShort} {PlatformVers} is available on {OCPShort} 4.9 and later versions.
+The {OperatorPlatformNameShort} to install {PlatformNameShort} {PlatformVers} is available on {OCPShort} 4.9 and later versions.
 
 [role="_additional-resources"]
 .Additional resources
