--- a/downstream/titles/aap-operator-installation/master.adoc
+++ b/downstream/titles/aap-operator-installation/master.adoc
@@ -13,7 +13,7 @@ include::attributes/attributes.adoc[]
 
 Thank you for your interest in {PlatformName}. {PlatformNameShort} is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
 
-This guide helps you to understand the installation, migration and upgrade requirements for deploying the {OperatorPlatform} on {OCPShort}.
+This guide helps you to understand the installation, migration and upgrade requirements for deploying the {OperatorPlatformNameShort} on {OCPShort}.
 
 include::{Boilerplate}[]
 
