--- a/downstream/titles/release-notes/topics/aap-25-fixed-issues.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-fixed-issues.adoc
@@ -77,6 +77,6 @@ This section provides information about fixed issues in {PlatformNameShort} 2.5.
 
 * Instead of the target service only, all {EDAName} services are enabled after installation is completed. The {EDAName} services will always start after the setup is complete. (AAP-15889)
 
-== {OperatorPlatform}
+== {OperatorPlatformNameShort}
 
 * Fixed Django REST Framework (DRF) browsable views. (AAP-25508)
