--- a/downstream/assemblies/platform/assembly-deploy-eda-controller-on-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-deploy-eda-controller-on-aap-operator.adoc
@@ -3,14 +3,14 @@ ifdef::context[:parent: {context}]
 
 [id="deploy-eda-controller-on-aap-operator-ocp"]
 
-= Deploying {EDAcontroller} with {OperatorPlatform} on {OCPShort}
+= Deploying {EDAcontroller} with {OperatorPlatformName} on {OCP}
 
 :context: deploying
 
 [role="_abstract"]
 {EDAcontroller} is the interface for event-driven automation and introduces automated resolution of IT requests. This component helps you connect to sources of events and acts on those events using rulebooks. When you deploy {EDAcontroller}, you can automate decision making, use numerous event sources, implement event-driven automation within and across multiple IT use cases, and achieve more efficient service delivery. 
 
-Use the following instructions to install {EDAName} with your {OperatorPlatform} on {OCPShort}.
+Use the following instructions to install {EDAName} with your {OperatorPlatformNameShort} on {OCPShort}.
 
 include::platform/proc-deploy-eda-controller-with-aap-operator-ocp.adoc[leveloffset=+1]
 
