--- a/downstream/assemblies/platform/assembly-installing-aap-operator-cli.adoc
+++ b/downstream/assemblies/platform/assembly-installing-aap-operator-cli.adoc
@@ -9,12 +9,12 @@ See also the complementary step on the last line of this file.
 ifdef::context[:parent-context: {context}]
 
 [id="installing-aap-operator-cli"]
-= Installing {OperatorPlatform} from the {OCPShort} CLI
+= Installing {OperatorPlatformName}  from the {OCPShort} CLI
 
 :context: installing-aap-operator-cli
 
 [role="_abstract"]
-Use these instructions to install the {OperatorPlatform} on {OCP} from the {OCPShort} command-line interface (CLI) using the [command]`oc` command.
+Use these instructions to install the {OperatorPlatformNameShort} on {OCP} from the {OCPShort} command-line interface (CLI) using the [command]`oc` command.
 
 == Prerequisites
 
