--- a/downstream/assemblies/platform/assembly-operator-add-execution-nodes.adoc
+++ b/downstream/assemblies/platform/assembly-operator-add-execution-nodes.adoc
@@ -2,11 +2,11 @@ ifdef::context[:parent-context: {context}]
 
 [id="operator-add-execution-nodes_{context}"]
 
-= Adding execution nodes to {PlatformNameShort} Operator
+= Adding execution nodes to {OperatorPlatformName}
 
 :context: operator-upgrade
 
-You can enable the {OperatorPlatform} with execution nodes by downloading and installing the install bundle.  
+You can enable the {OperatorPlatformNameShort} with execution nodes by downloading and installing the install bundle.  
 
 
 include::platform/proc-add-operator-execution-nodes.adoc[leveloffset=+1]
