--- a/downstream/assemblies/platform/assembly-operator-install-planning.adoc
+++ b/downstream/assemblies/platform/assembly-operator-install-planning.adoc
@@ -4,7 +4,7 @@ ifdef::context[:parent-context: {context}]
 
 
 [id="operator-install-planning"]
-= Planning your {PlatformName} operator installation on {OCP}
+= Planning your {OperatorPlatformName} on {OCP}
 
 
 :context: operator-install-planning
@@ -12,7 +12,7 @@ ifdef::context[:parent-context: {context}]
 [role="_abstract"]
 {PlatformName} is supported on both Red Hat Enterprise Linux and Red Hat Openshift.
 
-OpenShift operators help install and automate day-2 operations of complex, distributed software on {OCP}. The {OperatorPlatform} enables you to deploy and manage {PlatformNameShort} components on {OCP}.
+OpenShift operators help install and automate day-2 operations of complex, distributed software on {OCP}. The {OperatorPlatformNameShort} enables you to deploy and manage {PlatformNameShort} components on {OCP}.
 
 You can use this section to help plan your {PlatformName} installation on your {OCP} environment. Before installing, review the supported installation scenarios to determine which meets your requirements.
 
