--- a/downstream/assemblies/platform/assembly-operator-upgrade.adoc
+++ b/downstream/assemblies/platform/assembly-operator-upgrade.adoc
@@ -3,13 +3,13 @@ ifdef::context[:parent-context: {context}]
 
 [id="operator-upgrade_{context}"]
 
-= Upgrading {OperatorPlatform} on {OCPShort}
+= Upgrading {OperatorPlatformName} on {OCPShort}
 
 :context: operator-upgrade
 
 [role="_abstract"]
 
-The {OperatorPlatform} simplifies the installation, upgrade and deployment of new {PlatformName} instances in your {OCPShort} environment.
+The {OperatorPlatformNameShort} simplifies the installation, upgrade and deployment of new {PlatformName} instances in your {OCPShort} environment.
 
 include::platform/con-operator-upgrade-considerations.adoc[leveloffset=+1]
 include::platform/con-operator-upgrade-prereq.adoc[leveloffset=+1]
