--- a/downstream/modules/platform/proc-aap-controller-backup.adoc
+++ b/downstream/modules/platform/proc-aap-controller-backup.adoc
@@ -8,13 +8,13 @@ Use this procedure to back up a deployment of the controller, including jobs, in
 .Prerequisites
 
 * You must be authenticated with an OpenShift cluster.
-* You have installed {OperatorPlatform} on the cluster.
-* You have deployed {ControllerName} using the {OperatorPlatform}.
+* You have installed {OperatorPlatformNameShort} on the cluster.
+* You have deployed {ControllerName} using the {OperatorPlatformNameShort}.
 
 .Procedure
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *Automation Controller Backup* tab.
 . Click btn:[Create AutomationControllerBackup].
 . Enter a *Name* for the backup.
@@ -45,7 +45,7 @@ A backup tarball of the specified deployment is created and available for data r
 .Verification
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform}.
+. Select your {OperatorPlatformNameShort}.
 . Select the *AutomationControllerBackup* tab.
 . Select the backup resource you want to verify.
 . Scroll to *Conditions* and check that the *Successful* status is `True`.
