--- a/downstream/modules/platform/proc-aap-controller-yaml-backup.adoc
+++ b/downstream/modules/platform/proc-aap-controller-yaml-backup.adoc
@@ -7,8 +7,8 @@ See the following procedure for how to back up a deployment of the {ControllerNa
 .Prerequisites
 
 * You must be authenticated with an OpenShift cluster.
-* You have installed {OperatorPlatform} on the cluster.
-* You have deployed {ControllerName} using the {OperatorPlatform}.
+* You have installed {OperatorPlatformNameShort} on the cluster.
+* You have deployed {ControllerName} using the {OperatorPlatformNameShort}.
 
 .Procedure
 
