--- a/downstream/modules/platform/proc-operator-deploy-central-config.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-central-config.adoc
@@ -8,7 +8,7 @@ The following procedure simulates a scenario where you have {ControllerName} as 
 .Procedure 
 . Log in to {OCP}.
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Click btn:[Subscriptions] and edit your *Update channel* to *stable-2.5*.
 . Click btn:[Details] and on the *{PlatformNameShort}* tile click btn:[Create instance].
 . From the *Create {PlatformNameShort}* page enter a name for your instance in the *Name* field.
