--- a/downstream/modules/platform/proc-operator-external-db-hub.adoc
+++ b/downstream/modules/platform/proc-operator-external-db-hub.adoc
@@ -1,12 +1,12 @@
 
 [id="proc-operator-external-db-hub"]
 
-= Configuring an external database for {HubName} on {OperatorPlatform}
+= Configuring an external database for {HubName} on {OperatorPlatformName}
 
 [role="_abstract"]
 For users who prefer to deploy {PlatformNameShort} with an external database, they can do so by configuring a secret with instance credentials and connection information, then applying it to their cluster using the `oc create` command.
 
-By default, the {OperatorPlatform} automatically creates and configures a managed PostgreSQL pod in the same namespace as your {PlatformNameShort} deployment.
+By default, the {OperatorPlatformNameShort} automatically creates and configures a managed PostgreSQL pod in the same namespace as your {PlatformNameShort} deployment.
 
 You can choose to use an external database instead if you prefer to use a dedicated node to ensure dedicated resources or to manually manage backups, upgrades, or performance tweaks.
 
@@ -15,7 +15,7 @@ You can choose to use an external database instead if you prefer to use a dedica
 The same external database (PostgreSQL instance) can be used for both {HubName} and {ControllerName} as long as the database names are different. In other words, you can have multiple databases with different names inside a single PostgreSQL instance.
 ====
 
-The following section outlines the steps to configure an external database for your {HubName} on a {OperatorPlatform}.
+The following section outlines the steps to configure an external database for your {HubName} on a {OperatorPlatformNameShort}.
 
 .Prerequisite
 The external database must be a PostgreSQL database that is the version supported by the current release of {PlatformNameShort}.
