--- a/downstream/modules/platform/proc-operator-upgrade.adoc
+++ b/downstream/modules/platform/proc-operator-upgrade.adoc
@@ -1,11 +1,11 @@
 [id="upgrading-operator_{context}"]
 
-= Upgrading the {OperatorPlatform}
+= Upgrading the {OperatorPlatformNameShort}
 
 
 [role=_abstract]
 
-To upgrade to the latest version of {OperatorPlatform} on {OCPShort}, do the following:
+To upgrade to the latest version of {OperatorPlatformNameShort} on {OCPShort}, do the following:
 
 .Prodedure
 . Log in to {OCPShort}.
