--- a/downstream/modules/platform/proc-cli-get-controller-pwd.adoc
+++ b/downstream/modules/platform/proc-cli-get-controller-pwd.adoc
@@ -34,14 +34,14 @@ The address for the platform gateway instance is `example-ansible-automation-pla
 
 == Fetching the platform gateway password
 
-The YAML block for the platform gateway instance in [filename]`sub.yaml` assigns values to the _name_ and _admin_user_ keys.
+The YAML block for the platform gateway instance in the `AnsibleAutomationPlatform` object assigns values to the _name_ and _admin_user_ keys.
 Use these values in the following command to fetch the password for the platform gateway instance.
 
 -----
 oc get secret/<your instance name>-<admin_user>-password -o yaml
 -----
 
-The default value for _admin_user_ is `_admin_`. Modify the command if you changed the admin username in [filename]`sub.yaml`.
+The default value for _admin_user_ is `_admin_`. Modify the command if you changed the admin username in the `AnsibleAutomationPlatform` object.
 
 The following example retrieves the password for a platform gateway object called `_example_`: 
 
@@ -49,7 +49,7 @@ The following example retrieves the password for a platform gateway object calle
 oc get secret/example-admin-password -o yaml
 -----
 
-The password for the platform gateway instance is listed in the `metadata` field in the output:
+The base64 encoded password for the platform gateway instance is listed in the `metadata` field in the output:
 
 -----
 $ oc get secret/example-admin-password -o yaml
